# basic-placement-simulator

./: .gitignore  CMakeLists.txt  GITHUB_UPLOAD.md  README.md  build.bat  main.cpp  setup_git.ps1  test_input.txt  visualize.bat
cost/: cost.cc  cost.h
detail/: detail_place.cc  detail_place.h
io/: reader.cc  reader.h
legal/: legalize.cc  legalize.h
model/: placement.cc  placement.h
opt/: anneal.cc  anneal.h
viz/: plot.py  write_json.cc  write_json.h
